Ingress/netflix-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netflix-ingress
  labels:
    name: netflix-deploy
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: netflix.ecriahb.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: netflix-svc
            port: 
              number: 80
